<resources>
    <string name="app_name">navigation menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_calender1">부대일정</string>
    <string name="menu_results">일일결산</string>
    <string name="menu_tools">근무표</string>
    <string name="menu_host">업무별담당자</string>
    <string name="menu_gallery">부대활동</string>
    <string name="menu_calender2">청소/빨래달력</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="여단지침">여단지침</string>
    <string name="군단지침">군단지침</string>
</resources>
