<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationmenu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calender1"
        android:name="com.example.navigationmenu.ui.calender1.Calendar1Fragment"
        android:label="@string/menu_calender1"
        tools:layout="@layout/fragment_calender1" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.navigationmenu.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.navigationmenu.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_host"
        android:name="com.example.navigationmenu.ui.host.HostFragment"
        android:label="@string/menu_host"
        tools:layout="@layout/fragment_host" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationmenu.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_calender2"
        android:name="com.example.navigationmenu.ui.calendar2.Calendar2Fragment"
        android:label="@string/menu_calender2"
        tools:layout="@layout/fragment_calender2" />
</navigation>